gac_sb/objects/Societe_a_auditer__c.object
<CustomObject>
    <description>Entités à intégrer à un objet Contrat</description>
    <fields>
        <fullName>Concerne_par_la_mission__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Concerné par la mission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_a_facturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact à facturer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audité dans les contrats (Contact à facturer)</relationshipLabel>
        <relationshipName>Facture_contrat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Filliales concernées</relationshipLabel>
        <relationshipName>Societes_a_auditer</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Societe_a_auditer__c</fullName>
        <label>Société à auditer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inclus dans le périmètre des contrats</relationshipLabel>
        <relationshipName>Auditee_contrat</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Statut_du_contrat__c</fullName>
        <formula>CASE(TEXT(Contract__r.Status), /*Traduction*/
&apos;Processus d\&apos;approbation en cours&apos;,$Label.Processus_d_approbation_en_cours,
&apos;Activé&apos;,$Label.Active,
&apos;Non activé&apos;,$Label.Non_active,
&apos;Clos&apos;,$Label.Clos,
TEXT(Contract__r.Status))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statut du contrat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suivi_du_dossier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suivi du dossier</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sociétés à auditer</relationshipLabel>
        <relationshipName>Suivi_contrat</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Société à auditer</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nom de la société à auditer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sociétés à auditer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>